2025-10-06T00:51:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18266874551 # 788
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-06
* notice: last 14d: unq all: 4 8
* notice: prev accum: outdated-unq outdated-all / unq all: 473 1496 / 478 1505
* notice: next accum: outdated-unq outdated-all / unq all: 474 1497 / 478 1505
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-22] / []

2025-10-03T00:49:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18209592086 # 785
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-03
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 473 1496 / 477 1501
* notice: next accum: outdated-unq outdated-all / unq all: 473 1496 / 478 1505
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2025-10-02]

2025-10-02T00:48:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18179906044 # 784
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-02
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 473 1496 / 476 1500
* notice: next accum: outdated-unq outdated-all / unq all: 473 1496 / 477 1501
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-10-01]

2025-10-01T00:56:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18147748124 # 783