@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-06T00:51:24Z",
+  "timestamp" : "2025-10-07T00:50:29Z",
   "count_outdated" : 1497,
   "uniques_outdated" : 474,
-  "count" : 1505,
-  "uniques" : 478,
+  "count" : 1509,
+  "uniques" : 479,
   "views" : [
     {
       "timestamp": "2025-09-25T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2025-10-02T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-06T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "count_decinc": [ 0, 4 ],
