@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 4,
+  "count": 12,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2025-09-25T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2025-10-02T00:00:00Z",
+      "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-06T00:00:00Z",
       "count": 4,
       "uniques": 1
     }
