@@ -1,3 +1,12 @@
+2025-10-07T00:50:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18298647066 # 789
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-07
+* notice: last 14d: unq all: 5 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 474 1497 / 478 1505
+* notice: next accum: outdated-unq outdated-all / unq all: 474 1497 / 479 1509
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
+* notice: removed / changed dates: [] / [2025-10-06]
+
 2025-10-06T00:51:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18266874551 # 788
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-06
